/*
	Copyright The containerd Authors.

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
*/

syntax = "proto3";

package containerd.services.serlinux.v1;

option go_package = "github.com/containerd/containerd/api/services/selinux/v1;selinux";

service Selinux {
	rpc InitLabel(InitLabelRequest) returns (InitLabelResponse);
	rpc ReleaseLabel(ReleaseLabelRequest) returns (ReleaseLabelResponse);
}

message InitLabelRequest {
	repeated string selinux_option = 1;
}

message InitLabelResponse {
	string process_label = 1;
	string mount_label = 2;
}

message ReleaseLabelRequest {
	string selinux_label = 1;
}

message ReleaseLabelResponse {}
